--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title> Alura Books </title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <h1> Alura Book </h1>
+</body>
+</html>
